err/envbuilder.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/configobj-5.0.6.egg-info'...
Listing './lib/python3.5/site-packages/envbuilder'...
Compiling './lib/python3.5/site-packages/envbuilder/command.py'...
***   File "./lib/python3.5/site-packages/envbuilder/command.py", line 67
    print self.brief_help
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/envbuilder/config.py'...
***   File "./lib/python3.5/site-packages/envbuilder/config.py", line 63
    except MissingInterpolationOption, e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/envbuilder/custom.py'...
***   File "./lib/python3.5/site-packages/envbuilder/custom.py", line 81
    print self._section['help']
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/envbuilder/help.py'...
***   File "./lib/python3.5/site-packages/envbuilder/help.py", line 29
    print "SYNTAX:  envb [command]"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/envbuilder/run.py'...
***   File "./lib/python3.5/site-packages/envbuilder/run.py", line 41
    except ImportError, i:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/envbuilder/sh.py'...
***   File "./lib/python3.5/site-packages/envbuilder/sh.py", line 22
    except subprocess.CalledProcessError, e:
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/envbuilder/version.py'...
***   File "./lib/python3.5/site-packages/envbuilder/version.py", line 10
    print envbuilder.__version__
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/envbuilder-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pysistence'...
Listing './lib/python3.5/site-packages/pysistence/tests'...
Listing './lib/python3.5/site-packages/pysistence-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv_support'...
Listing './share'...
Listing './share/python-wheels'...
